# ylab_cloudsen

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
docs/: api.md  installation.md  usage.md
tests/: __init__.py  test_ylab_cloudsen.py
ylab_cloudsen/: __init__.py  crop_functions.py  torch_functions.py  ylab_cloudsen.py
