[tool]
[tool.poetry]
name = "ylab_cloudsen"
version = "0.1.0"
homepage = "https://github.com/ivanstrel/ylab_cloudsen"
description = "Skeleton project created by Cookiecutter PyPackage."
authors = ["Ivan Igorevich Strelnikov < >"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "ylab_cloudsen" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11.0"
torch = { version = "2.1.0+cpu", source = "torch"}
torchvision = { version = "0.16.0+cpu", source = "torch"}
pytorch-lightning = ">=2.1.3"
segmentation-models-pytorch = ">=0.3.3"
xarray = ">=2023.5.0"
rioxarray = ">=0.14.1"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
black  = { version = ">=24.1.1"}
isort  = { version = ">=5.8.0"}
flake8  = { version = ">=7.0.0"}
flake8-docstrings = { version = ">=1.6.0"}
mypy = {version = ">=1.8.0"}
pytest  = { version = ">=6.2.4"}
pytest-cov  = { version = ">=2.12.0"}
tox  = { version = ">=4.12.1"}
virtualenv  = { version = ">=20.25.0"}
pip  = { version = ">=24.0"}
mkdocs  = { version = ">=1.1.2"}
mkdocs-include-markdown-plugin  = { version = ">=1.0.0"}
mkdocs-material  = { version = ">=6.1.7"}
mkdocstrings = { version = ">=0.15.2"}
mkdocstrings-python = {version = ">=1.8.0"}
mkdocs-material-extensions  = { version = ">=1.0.1"}
twine  = { version = ">=3.3.0"}
mkdocs-autorefs = {version = ">=0.2.1"}
pre-commit = {version = ">=2.12.0"}
toml = {version = ">=0.10.2"}
bump2version = {version = ">=1.0.1"}
watchdog = {version = ">=4.0.0"}

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311',]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
